[gd_scene load_steps=11 format=3 uid="uid://dfgpugq072h13"]

[ext_resource type="PackedScene" uid="uid://42oxmd28tyes" path="res://german_text_input.tscn" id="1_36b10"]
[ext_resource type="Script" path="res://SpellingGame.gd" id="1_c6cya"]
[ext_resource type="PackedScene" uid="uid://dkvmhg6xmpk1x" path="res://editable_label.tscn" id="2_p2cs1"]
[ext_resource type="FontFile" uid="uid://duod5phe1frai" path="res://Fonts/Bright DEMO.otf" id="3_nlop1"]

[sub_resource type="LabelSettings" id="LabelSettings_eridn"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_kqd3f"]
font_size = 18

[sub_resource type="LabelSettings" id="LabelSettings_al3kj"]
resource_local_to_scene = true
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_8eyba"]
font = ExtResource("3_nlop1")
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_8bbqq"]
font_size = 22

[sub_resource type="LabelSettings" id="LabelSettings_wnf45"]
font_size = 24

[node name="SpellingGame" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
script = ExtResource("1_c6cya")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="SettingsButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Spelling Game"
label_settings = SubResource("LabelSettings_eridn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Exit" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="Score" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
text = "0 exp"
label_settings = SubResource("LabelSettings_eridn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuestionContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.24
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="QuestionContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Tip" parent="QuestionContainer/VBoxContainer" instance=ExtResource("2_p2cs1")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
label_settings = SubResource("LabelSettings_kqd3f")

[node name="LineEdit" parent="QuestionContainer/VBoxContainer/Tip" index="1"]
theme_override_font_sizes/font_size = 16

[node name="Question" parent="QuestionContainer/VBoxContainer" instance=ExtResource("2_p2cs1")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
label_settings = SubResource("LabelSettings_al3kj")

[node name="Answer" parent="QuestionContainer/VBoxContainer" instance=ExtResource("1_36b10")]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 36
alignment = 1
expand_to_text_length = true
z_to_y = false
ae_to_umlaut = false

[node name="HBoxContainer" type="HBoxContainer" parent="QuestionContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="SkipButton" type="Button" parent="QuestionContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Skip"

[node name="TipButton" type="Button" parent="QuestionContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Give me a tip"

[node name="CheckButton" type="Button" parent="QuestionContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Check"

[node name="Control" type="Control" parent="QuestionContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="SettingsContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 6

[node name="Label" type="Label" parent="SettingsContainer"]
layout_mode = 2
text = "Settings"
label_settings = SubResource("LabelSettings_8eyba")
horizontal_alignment = 1

[node name="Control2" type="Control" parent="SettingsContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 60
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Questions-Types:"
label_settings = SubResource("LabelSettings_8bbqq")

[node name="CopyButton" type="CheckButton" parent="SettingsContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = " Copy"

[node name="TranslateButton" type="CheckButton" parent="SettingsContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = " Translate"

[node name="FillButton" type="CheckButton" parent="SettingsContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = " Fill a gap"

[node name="VBoxContainer2" type="VBoxContainer" parent="SettingsContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "German Keyboard:"
label_settings = SubResource("LabelSettings_8bbqq")

[node name="z_to_y" type="CheckButton" parent="SettingsContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "   z -> y"

[node name="ae_to_a" type="CheckButton" parent="SettingsContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "   ae -> ä"

[node name="right_umlaufts" type="CheckButton" parent="SettingsContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "   ' -> ä"

[node name="Control" type="Control" parent="SettingsContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="SaveButton" type="Button" parent="SettingsContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "Save"

[node name="PrevContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 60

[node name="PreviousContainer" type="ScrollContainer" parent="PrevContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PrevList" type="VBoxContainer" parent="PrevContainer/PreviousContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="PrevQuestion" type="Label" parent="PrevContainer/PreviousContainer/PrevList"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Previous Question"
label_settings = SubResource("LabelSettings_wnf45")
horizontal_alignment = 1

[node name="PrevAnswer" type="Label" parent="PrevContainer/PreviousContainer/PrevList"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Your Answer"
label_settings = SubResource("LabelSettings_wnf45")
horizontal_alignment = 1

[node name="PrevBlank" type="Label" parent="PrevContainer/PreviousContainer/PrevList"]
unique_name_in_owner = true
visible = false
layout_mode = 2
label_settings = SubResource("LabelSettings_wnf45")
horizontal_alignment = 1

[node name="PreviousButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Previous Questions"

[node name="Control2" type="Control" parent="."]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[connection signal="pressed" from="HBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="text_edited" from="QuestionContainer/VBoxContainer/Tip" to="." method="_on_tip_text_edited"]
[connection signal="text_edited" from="QuestionContainer/VBoxContainer/Question" to="." method="_on_question_text_edited"]
[connection signal="text_submitted" from="QuestionContainer/VBoxContainer/Answer" to="." method="_on_answer_text_submitted"]
[connection signal="pressed" from="QuestionContainer/VBoxContainer/HBoxContainer/SkipButton" to="." method="_on_skip_button_pressed"]
[connection signal="pressed" from="QuestionContainer/VBoxContainer/HBoxContainer/TipButton" to="." method="_on_tip_button_pressed"]
[connection signal="pressed" from="QuestionContainer/VBoxContainer/HBoxContainer/CheckButton" to="." method="_on_check_button_pressed"]
[connection signal="pressed" from="SettingsContainer/HBoxContainer/VBoxContainer/CopyButton" to="." method="_on_copy_button_pressed"]
[connection signal="pressed" from="SettingsContainer/HBoxContainer/VBoxContainer/TranslateButton" to="." method="_on_translate_button_pressed"]
[connection signal="pressed" from="SettingsContainer/HBoxContainer/VBoxContainer/FillButton" to="." method="_on_fill_button_pressed"]
[connection signal="pressed" from="SettingsContainer/HBoxContainer/VBoxContainer2/z_to_y" to="." method="_on_z_to_y_pressed"]
[connection signal="pressed" from="SettingsContainer/HBoxContainer/VBoxContainer2/ae_to_a" to="." method="_on_ae_to_a_pressed"]
[connection signal="pressed" from="SettingsContainer/HBoxContainer/VBoxContainer2/right_umlaufts" to="." method="_on_right_umlaufts_pressed"]
[connection signal="pressed" from="SettingsContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="PreviousButton" to="." method="_on_previous_button_pressed"]

[editable path="QuestionContainer/VBoxContainer/Tip"]
